# tscat_gui

./: AUTHORS.rst  CLAUDE.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: release.yml  test_main.yml  test_pull_requests.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
example/: taglist.py  tscat-gui.py
tests/: __init__.py  conftest.py  test_actions.py  test_catalog_model.py  test_external_signals.py  test_gui_smoke.py  test_helpers.py  test_mypy.py  test_review_regressions.py  test_root_model.py  test_state.py  test_tscat_gui.py  test_undo.py  test_undo_integration.py
tests/fuzzing/: actions.py  attribute_actions.py  catalogue_actions.py  conftest.py  event_actions.py  introspect.py  model.py  story.py  test_actions.py  test_fuzzer_regressions.py  test_model.py  test_story.py  test_ui_fuzzing.py  test_wf_catalogue.py  test_wf_edit.py  test_wf_events.py  test_wf_undo.py  undo_actions.py
tscat_gui/: __init__.py  app.py  cli.py  edit.py  logger.py  metadata.py  model.py  predicate.py  state.py  undo.py
tscat_gui/model_base/: constants.py
tscat_gui/tscat_driver/: __init__.py  actions.py  catalog_model.py  driver.py  mime.py  model.py  nodes.py  table_unique_model.py  tscat_root_model.py
tscat_gui/utils/: editable_label.py  export.py  flow_layout.py  helper.py  import_export.py  keyword_list.py
