[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core"]

[project]
name = 'tscat_gui'
version = "0.5.0"
description = "Time-series catalogue - graphical user interface."
keywords = ["satellite", "plasma-physics", "nasa-data", "amda", "cdpp", "SciQLop"]
authors = [
    { name = "Patrick Boettcher", email = "p@yai.se" }
]

maintainers = [
    { name = "Patrick Boettcher", email = "p@yai.se" },
    { name = "Alexis Jeandet", email = "alexis.jeandet@member.fsf.org" }
]

requires-python = ">=3.8"
license = { file = "LICENSE" }
readme = "README.rst"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    'PySide6',
    'tscat==0.4.*',
]

[project.optional-dependencies]
test = [
    'flake8',
    'appdirs-stubs',
    "pytest>=4.6.5",
    'pytest',
    'pytest-pep8',
    'pytest-cov',
    'pytest-timeout',
    'ddt'
]
doc = [
    'sphinx',
    'sphinx_rtd_theme',
    'sphinx-autodoc-typehints'
]

[project.urls]
homepage = "https://github.com/SciQLop/tscat_gui"
repository = "https://github.com/SciQLop/tscat_gui"
documentation = "https://github.com/SciQLop/tscat_gui"
