[project]
name = "tscat_gui"
version = "0.6.0"
description = "Time-series catalogue - graphical user interface."
keywords = ["satellite", "plasma-physics", "nasa-data", "amda", "cdpp", "SciQLop"]
authors = [
    { name = "Patrick Boettcher", email = "p@yai.se" }
]
maintainers = [
    { name = "Patrick Boettcher", email = "p@yai.se" },
    { name = "Alexis Jeandet", email = "alexis.jeandet@member.fsf.org" }
]
requires-python = ">=3.10"
license = { file = "LICENSE" }
readme = "README.rst"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "PySide6",
    "tscat>=0.5.1,<0.6",
]

[project.optional-dependencies]
test = [
    "pytest>=4.6.5",
    "pytest-cov",
    "pytest-timeout",
    "pytest-qt",
    "hypothesis",
    "ddt",
    "mypy",
    "ruff>=0.15.6",
]
doc = [
    "sphinx",
    "sphinx_rtd_theme",
    "sphinx-autodoc-typehints",
]

[project.scripts]
tscat_gui = "tscat_gui:main"

[project.urls]
homepage = "https://github.com/SciQLop/tscat_gui"
repository = "https://github.com/SciQLop/tscat_gui"
documentation = "https://github.com/SciQLop/tscat_gui"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
exclude = ["test-reports"]

[tool.ruff.lint]
select = ["E", "F", "W"]
exclude = ["docs", "test-reports"]

[dependency-groups]
dev = [
    "ruff>=0.15.6",
    "mypy",
]
